@@ -2,14 +2,12 @@
 SMARTMONTOOLS - SMART utility toolset for Linux
 ===============================================
 
-
 == HOME ==
 The home for smartmontools is located at:
 http://smartmontools.sourceforge.net
 Please see this web site
 for updates, documentation, and for submitting patches and bug
 reports.
-
 
 == COPYING ==
 Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
@@ -23,6 +21,11 @@ You should have received a copy of the GNU General Public License (for
 example COPYING); if not, write to the Free Software Foundation, Inc., 675
 Mass Ave, Cambridge, MA 02139, USA.
 
+== CREDITS ==
+This code was originally developed as a Senior Thesis by Michael Cornwell
+at the Concurrent Systems Laboratory (now part of the Storage Systems
+Research Center), Jack Baskin School of Engineering, University of
+California, Santa Cruz. http://ssrc.soe.ucsc.edu/
 
 == OVERVIEW ==
 SMARTMONTOOLS contains utilities that control and monitor storage
@@ -180,4 +183,4 @@ Fax: (408) 867-2115
 E-Mail: 250-1752@mcimail.com.
 
 
-$Id: README,v 1.5 2002/10/12 11:10:01 ballen4705 Exp $
+$Id: README,v 1.6 2002/10/14 15:26:00 ballen4705 Exp $
