@@ -2,7 +2,7 @@ TODO list for smartmontools:
 
 Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 
-$Id: TODO,v 1.5 2002/10/12 11:10:01 ballen4705 Exp $
+$Id: TODO,v 1.6 2002/10/14 15:26:02 ballen4705 Exp $
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
@@ -12,6 +12,11 @@ version.
 You should have received a copy of the GNU General Public License (for
 example COPYING); if not, write to the Free Software Foundation, Inc., 675
 Mass Ave, Cambridge, MA 02139, USA.
+
+This code was originally developed as a Senior Thesis by Michael Cornwell
+at the Concurrent Systems Laboratory (now part of the Storage Systems
+Research Center), Jack Baskin School of Engineering, University of
+California, Santa Cruz. http://ssrc.soe.ucsc.edu/.
 
 
 Testing
