@@ -1,4 +1,4 @@
-//  $Id: atacmds.cpp,v 1.4 2002/10/13 13:10:56 ballen4705 Exp $
+//  $Id: atacmds.cpp,v 1.5 2002/10/14 15:26:05 ballen4705 Exp $
 /*
  * atacmds.c
  *
@@ -14,6 +14,12 @@
  * You should have received a copy of the GNU General Public License
  * (for example COPYING); if not, write to the Free
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ *
+ * This code was originally developed as a Senior Thesis by Michael Cornwell
+ * at the Concurrent Systems Laboratory (now part of the Storage Systems
+ * Research Center), Jack Baskin School of Engineering, University of
+ * California, Santa Cruz. http://ssrc.soe.ucsc.edu/
+ * 
  */
 
 
