@@ -1,4 +1,4 @@
-//  $Id: smartctl.cpp,v 1.7 2002/10/12 11:10:01 ballen4705 Exp $
+//  $Id: smartctl.cpp,v 1.8 2002/10/14 15:26:28 ballen4705 Exp $
 /*
  * smartctl.c
  *
@@ -13,6 +13,12 @@
  * You should have received a copy of the GNU General Public License
  * (for example COPYING); if not, write to the Free
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ *
+ * This code was originally developed as a Senior Thesis by Michael Cornwell
+ * at the Concurrent Systems Laboratory (now part of the Storage Systems
+ * Research Center), Jack Baskin School of Engineering, University of
+ * California, Santa Cruz. http://ssrc.soe.ucsc.edu/
+ *
  */
 
 
@@ -215,7 +221,7 @@ int main (int argc, char **argv){
     printf("is free software, and you are welcome to redistribute it\n");
     printf("under the terms of the GNU General Public License Version 2.\n");
     printf("See http://www.gnu.org for further details.\n\n");
-    printf("CVS version ID %s\n","$Id: smartctl.cpp,v 1.7 2002/10/12 11:10:01 ballen4705 Exp $");
+    printf("CVS version ID %s\n","$Id: smartctl.cpp,v 1.8 2002/10/14 15:26:28 ballen4705 Exp $");
     exit(0);
  }
 
