@@ -8,7 +8,12 @@
 \# You should have received a copy of the GNU General Public License (for
 \# example COPYING); if not, write to the Free Software Foundation, Inc., 675
 \# Mass Ave, Cambridge, MA 02139, USA.
-.TH SMARTD 8  "$Date: 2002/10/11 09:20:32 $" "smartmontools-5.0"
+\# 
+\# This code was originally developed as a Senior Thesis by Michael Cornwell
+\# at the Concurrent Systems Laboratory (now part of the Storage Systems
+\# Research Center), Jack Baskin School of Engineering, University of
+\# California, Santa Cruz. http://ssrc.soe.ucsc.edu/
+.TH SMARTD 8  "$Date: 2002/10/14 15:26:30 $" "smartmontools-5.0"
 .SH NAME
 smartd \- S.M.A.R.T. Daemon
 .SH SYNOPSIS
@@ -109,9 +114,13 @@ University of Wisconsin - Milwaukee Physics Department
 .PP
 .SH CREDITS
 .fi
-This code was derived from the smartsuite package, written by
-Michael Cornwell, and from the previous ucsc smartsuite package.  It
-extends these to cover ATA-5 disks.
+This code was derived from the smartsuite package, written by Michael
+Cornwell, and from the previous ucsc smartsuite package. It extends
+these to cover ATA-5 disks. This code was originally developed as a
+Senior Thesis by Michael Cornwell at the Concurrent Systems Laboratory
+(now part of the Storage Systems Research Center), Jack Baskin School
+of Engineering, University of California, Santa
+Cruz. http://ssrc.soe.ucsc.edu/.
 .SH
 HOME PAGE FOR SMARTMONTOOLS: 
 .fi
@@ -169,4 +178,4 @@ Please let us know if there is an on\-line source for this document.
 
 .SH
 CVS ID OF THIS PAGE:
-$Id: smartd.8,v 1.6 2002/10/11 09:20:32 ballen4705 Exp $
+$Id: smartd.8,v 1.7 2002/10/14 15:26:30 ballen4705 Exp $
