@@ -6,7 +6,7 @@
 #
 # processname: smartd 
 #
-# $Id: smartd.initd,v 1.3 2002/10/11 09:20:32 ballen4705 Exp $
+# $Id: smartd.initd,v 1.4 2002/10/14 15:26:32 ballen4705 Exp $
 #
 # Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 # 
@@ -18,7 +18,12 @@
 # You should have received a copy of the GNU General Public License (for
 # example COPYING); if not, write to the Free Software Foundation, Inc., 675
 # Mass Ave, Cambridge, MA 02139, USA.
-
+#
+# This code was originally developed as a Senior Thesis by Michael Cornwell
+# at the Concurrent Systems Laboratory (now part of the Storage Systems
+# Research Center), Jack Baskin School of Engineering, University of
+# California, Santa Cruz. http://ssrc.soe.ucsc.edu/.
+#
 # source function library
 . /etc/rc.d/init.d/functions
 
